[package]
name = "spl-token"
version = "4.0.0"
description = "Solana Program Library Token"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = { git = "https://github.com/hamkj7hpo/solana.git", rev = "5208a7870826307290c30b7d80768f40267433a1" }
spl-discriminator = { path = "../libraries/discriminator", version = "0.4.1" }
spl-pod = { git = "https://github.com/hamkj7hpo/spl-pod.git", rev = "0ff7d641b198149f6e0b1265e85b7258db87e254" }
spl-program-error = { path = "../program-error", version = "0.4.2" }
arrayref = "0.3.9"
bytemuck = { version = "1.17.1", features = ["derive"] }
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1.0.63"
