[package]
name = "spl-token"
version = "4.0.0"
description = "Solana Program Library Token Program"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/hamkj7hpo/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.9"
bytemuck = { version = "1.18.0", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7"
solana-program = { git = "https://github.com/solana-labs/solana.git", rev = "b1e378009ffee4c75965723d3317fccbebcf2524" }
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_token"
