[package]
name = "binary-option"
version = "0.1.0"
edition = "2021"
license = "WTFPL"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = "2.1.0"
thiserror = "2.0"
spl-token = { git = "https://github.com/hamkj7hpo/solana-program-library.git", branch = "safe-pump-compat", package = "spl-token" }
arrayref = "0.3.9"
borsh = "1.5.3"
uint = "0.10"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true
