[package]
name = "spl-discriminator"
version = "0.4.1"
description = "Solana Program Library Discriminator"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = { git = "https://github.com/solana-labs/solana.git", rev = "b1e378009ffee4c75965723d3317fccbebcf2524" }
spl-program-error = { path = "../../program-error", version = "0.4.2" }
bytemuck = { version = "1.17.1", features = ["derive"] }
