[package]
name = "spl-discriminator"
version = "0.4.1"
description = "Solana Program Library Discriminator"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = { git = "https://github.com/hamkj7hpo/solana.git", rev = "079536b934de349771fa8a0e9945bcef01f529cc", package = "solana-program" }
spl-program-error = { path = "../../program-error", version = "0.4.2" }
bytemuck = { version = "1.17.1", features = ["derive"] }
