[package]
name = "spl-discriminator"
version = "0.4.1"
description = "Solana Program Library Discriminator"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = { git = "https://github.com/hamkj7hpo/solana.git", branch = "safe-pump-compat" }
spl-program-error = { path = "../../program-error", version = "0.4.2" }
bytemuck = { version = "1.17.1", features = ["derive"] }

[patch.crates-io]
zeroize = "1.3.0"
