[package]
name = "spl-managed-token"
version = "0.1.0"
description = "Solana Program Library Managed Token Program"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
arrayref = "0.3.9"
bincode = "1.3.2"
borsh = "1.5.3"
num-derive = "0.4"
num-traits = "0.2"
serde = "1.0.217"
serde_derive = "1.0.103"
solana-program = { git = "https://github.com/hamkj7hpo/solana.git", branch = "safe-pump-compat" }
spl-token-2022 = { git = "https://github.com/hamkj7hpo/token-2022.git", branch = "safe-pump-compat", default-features = false }
spl-associated-token-account = { git = "https://github.com/hamkj7hpo/associated-token-account.git", branch = "safe-pump-compat", default-features = false }
thiserror = "2.0"

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1.6"
solana-program-test = { git = "https://github.com/hamkj7hpo/solana.git", branch = "safe-pump-compat" }
solana-sdk = { git = "https://github.com/hamkj7hpo/solana.git", branch = "safe-pump-compat" }

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true
