[package]
name = "flash_loan_receiver"
version = "1.0.0"
edition = "2021"

[dependencies]
arrayref = "0.3.9"
solana-program = "2.1.0"
spl-token = { git = "https://github.com/hamkj7hpo/solana-program-library.git", branch = "safe-pump-compat", package = "spl-token", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
