[package]
name = "spl-associated-token-account"
version = "3.0.2"
edition = "2021"
description = "SPL Associated Token Account Program"
license = "Apache-2.0"
repository = "https://github.com/solana-labs/solana-program-library"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.2.1"
spl-token = { path = "../program", features = ["no-entrypoint"] }
