[package]
name = "spl-token"
version = "4.0.0"
edition = "2021"
description = "SPL Token Program"
license = "Apache-2.0"
repository = "https://github.com/solana-labs/solana-program-library"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
arrayref = "0.3.7"
bytemuck = { version = "1.15.0", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.2"
solana-program = "2.2.1"
thiserror = "1.0"

[features]
no-entrypoint = []
