[package]
name = "spl-governance-chat"
version = "0.2.9"
description = "Solana Program Library Governance Chat Program"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
arrayref = "0.3.9"
bincode = "1.3.2"
borsh = "1.5.3"
num-derive = "0.4"
num-traits = "0.2"
serde = "1.0.217"
serde_derive = "1.0.103"
solana-program = { git = "https://github.com/hamkj7hpo/solana.git", branch = "safe-pump-compat" }
spl-governance = { version = "4.0.0", path = "../../program" }
spl-governance-tools = { version = "0.1.4", path = "../../tools" }
spl-governance-addin-api = { version = "0.1.4", path = "../../addin-api" }
thiserror = "2.0"

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1.6"
solana-program-test = { git = "https://github.com/hamkj7hpo/solana.git", branch = "safe-pump-compat" }
solana-sdk = { git = "https://github.com/hamkj7hpo/solana.git", branch = "safe-pump-compat" }
spl-governance-test-sdk = { version = "0.1.4", path = "../../test-sdk" }
spl-governance-addin-mock = { version = "0.1.4", path = "../../addin-mock/program" }

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true
