[package]
name = "spl-token-swap-fuzz"
version = "0.0.1"
description = "Solana Program Library Token Swap Fuzzer"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
honggfuzz = { version = "0.5.56" }
arbitrary = { version = "1.4", features = ["derive"] }
solana-program = "2.1.0"
spl-math = { version = "0.3", path = "../../../libraries/math" }
spl-token = { git = "https://github.com/hamkj7hpo/solana-program-library.git", branch = "safe-pump-compat", package = "spl-token" }

[[bin]]
name = "token-swap-instructions"
path = "src/instructions.rs"
test = false
doc = false

[features]
no-entrypoint = []
